--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+      "postinstall": "playwright install"
+
   },
    "dependencies": {
     "@2captcha/captcha-solver": "^1.3.0",
@@ -52,6 +54,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+      "playwright": "^1.30.0",
     "typescript": "^5"
   }
 }
