--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "tough-cookie": "^4.1.4",
     "user-agents": "^1.1.156",
     "utf-8-validate": "^6.0.5",
-    "yn": "^5.0.0"
+    "yn": "^5.0.0",
+    "playwright": "^1.30.0"
+
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
@@ -54,7 +56,6 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-      "playwright": "^1.30.0",
     "typescript": "^5"
   }
 }
