--- a/package.json
+++ b/package.json
@@ -12,25 +12,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+      "postinstall": "playwright install"
+
   },
-  "dependencies": {
+   "dependencies": {
     "@2captcha/captcha-solver": "^1.3.0",
-    "@sparticuz/chromium": "^132.0.0",
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.7.8",
     "bufferutil": "^4.0.8",
+    "chromium-bidi": "^0.10.1",
     "cookie": "^1.0.2",
     "electron": "^33.2.1",
+    "ghost-cursor-playwright": "^2.1.0",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "next-swagger-doc": "^0.4.0",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
-    "playwright-core": "^1.50.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "rebrowser-playwright-core": "^1.49.1",
     "swagger-ui-react": "^5.18.2",
     "tough-cookie": "^4.1.4",
     "user-agents": "^1.1.156",
@@ -51,6 +54,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+      "playwright": "^1.30.0",
     "typescript": "^5"
   }
 }
