--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-      "postinstall": "playwright install"
-
+    "lint": "next lint"
   },
-   "dependencies": {
+  "dependencies": {
     "@2captcha/captcha-solver": "^1.3.0",
     "@vercel/analytics": "^1.2.2",
     "axios": "^1.7.8",
@@ -42,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "playwright": "1.49.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -54,7 +53,6 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-      "playwright": "^1.30.0",
     "typescript": "^5"
   }
 }
