--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@2captcha/captcha-solver": "^1.3.0",
     "@vercel/analytics": "^1.2.2",
+    "playwright": "1.49.0",
     "axios": "^1.7.8",
     "bufferutil": "^4.0.8",
     "chromium-bidi": "^0.10.1",
