--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
 {
   "name": "suno-api",
-  "description": "Use API to call the music generation service of suno.ai, and easily integrate it into agents like GPTs.",
-  "author": {
-    "name": "gcui.ai",
-    "url": "https://github.com/gcui-art/"
-  },
-  "license": "LGPL-3.0-or-later",
   "version": "1.1.0",
   "private": true,
   "scripts": {
@@ -32,7 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "rebrowser-playwright-core": "^1.49.1",
+    "rebrowser-playwright-core": "^1.49.0",
     "swagger-ui-react": "^5.18.2",
     "tough-cookie": "^4.1.4",
     "user-agents": "^1.1.156",
@@ -55,5 +49,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "playwright": "1.49.0"
   }
 }
